# motorgo-python

./: .gitignore  LICENSE  README.md  pyplink.py  pyproject.toml  setup.py  spi_test.py  test_plink.py
examples/read_imu/: read_imu.py
examples/spin_motors/: spin_motors.py
firmware_releases/: firmware_index.json
include/: utils.h
motorgo/: __init__.py  common.py  imu.py  message_parser.py  messages.py  motor_channel.py  plink.py
motorgo/cli/: cli.py  flash.py  flash_utils.py  motorgo_cli.py
motorgo_firmware/: platformio.ini
motorgo_firmware/include/: utils.h
motorgo_firmware/src/: get_board_id.cpp  pyplink_driver.cpp
plink_driver/include/: utils.h
plink_driver/src/: helper.h  pyplink_driver.cpp
pyplink/: __init__.py  pyplink.py
pyplink_firmware/: platformio.ini
pyplink_firmware/include/: utils.h
pyplink_firmware/src/: pyplink_driver.cpp
src/: pyplink_driver.cpp
